RESOLVED FIXED92173
WKContextGetGlobalStatistics() assigns wrong value to wkFrameCount in WKContextStatistics
https://bugs.webkit.org/show_bug.cgi?id=92173
Summary WKContextGetGlobalStatistics() assigns wrong value to wkFrameCount in WKConte...
Jae Hyun Park
Reported 2012-07-24 16:15:42 PDT
In WKContextGetGlobalStatistics(), wkViewCount in WebContext::Statistics is assigned to wkFrameCount in WKContextStatistics. wkFrameCount in WebContext:Statistics should be assigned to wkFrameCount in WKContextStatistics.
Attachments
Patch (1.69 KB, patch)
2012-07-24 16:26 PDT, Jae Hyun Park
no flags
Jae Hyun Park
Comment 1 2012-07-24 16:26:50 PDT
WebKit Review Bot
Comment 2 2012-07-24 17:47:01 PDT
Comment on attachment 154167 [details] Patch Clearing flags on attachment: 154167 Committed r123557: <http://trac.webkit.org/changeset/123557>
WebKit Review Bot
Comment 3 2012-07-24 17:47:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.