WKContextGetGlobalStatistics() assigns wrong value to wkFrameCount in WKContextStatistics https://bugs.webkit.org/show_bug.cgi?id=92173

Patch by Jae Hyun Park <jae.park@company100.net> on 2012-07-24
Reviewed by John Sullivan.

In WKContextGetGlobalStatistics(), wkViewCount in WebContext::Statistics
is assigned to wkFrameCount in WKContextStatistics.
wkFrameCount in WebContext:Statistics should be assigned to wkFrameCount in WKContextStatistics.

* UIProcess/API/C/WKContext.cpp:
(WKContextGetGlobalStatistics):

git-svn-id: svn://svn.chromium.org/blink/trunk@123557 bbb929c8-8fbe-4397-9dbb-9b2b20218538